vlib/v/checker/tests/nested_required_struct_field.vv
struct Foo {
	bar Bar
}

struct Bar {
	baz int [required]
}

struct FooToo {
	Bar
}

struct BarToo {
	baz int [required]
}

_ := Foo{}
_ := FooToo{}
